# marketplace-backend

./: .env.example  .flake8  .gitignore  Dockerfile  docker-compose.yml  env.example  pyproject.toml
src/apps/catalog/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
src/apps/catalog/migrations/: 0001_initial.py
src/apps/orders/: admin.py  exceptions.py  models.py  serializaers.py  tests.py  urls.py  views.py
src/apps/orders/migrations/: 0001_initial.py  0002_initial.py  0002_remove_orderitem_price.py
src/apps/orders/services/: orders.py
src/apps/products/: admin.py  models.py  serializers.py  urls.py  views.py
src/apps/products/migrations/: 0001_initial.py  0002_remove_product_available.py
src/apps/users/: admin.py  apps.py  serializers.py  urls.py  views.py
src/apps/users/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/core/: error_messages.py  exceptions.py
src/utils/: pagination.py
